# emonic-tutor

./: .gitignore  Procfile  e-monictutor.cabal  emonic-tutor.cabal  stack.yaml
src/: FindCard.hs  Main.hs
src/EmonicTutor/: Config.hs  FindCard.hs  Prelude.hs  SearchCard.hs  Types.hs
src/EmonicTutor/Data/: Card.hs  Slack.hs
src/EmonicTutor/SearchCard/: SearchCriteria.hs
