Name:                emonic-tutor
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable emonic-tutor
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
      base                      >= 4     && < 5,
      bytestring                >= 0.9.1 && < 0.11,
      containers                >= 0.3   && < 1.0,
      mtl                       >= 2     && < 3,
      snap-core                 >= 1     && < 2,
      snap-server               >= 1     && < 2

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
