Name:                emonic-tutor
Version:             0.1
Synopsis:            A Slack Bot For Magic Cards
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable emonic-tutor
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
      aeson                >= 1     && < 2,
      base                 >= 4     && < 5,
      bytestring           >= 0.9.1 && < 0.11,
      containers           >= 0.3   && < 1.0,
      monad-control        >= 1     && < 2,
      mtl                  >= 2     && < 3,
      random               >= 1     && < 2,
      snap-core            >= 1     && < 2,
      snap-server          >= 1     && < 2,
      text                 >= 1     && < 2,
      transformers         >= 0     && < 1,
      transformers-base    >= 0.3   && < 1,
      unordered-containers >= 0.2   && < 0.3

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
  other-modules:
    EmonicTutor.Config
    EmonicTutor.Data.Card
    EmonicTutor.Data.Slack
    EmonicTutor.SearchCard
    EmonicTutor.Types
